api: add initial swagger doc for /jobs
